--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--template title-->
-    <title>Natasha - One Page Portfolio html Template</title>
+    <title>Drake Paulsen</title>
 
     <!--==========Favicon==========-->
 
@@ -80,7 +80,7 @@
                     <div class="main-menu">
                         <div class="navbar navbar-cus">
                             <div class="navbar-header">
-                                <a href="index.html" class="navbar-brand">Natasha</a>
+                                <a href="index.html" class="navbar-brand">Drake Paulsen</a>
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -123,7 +123,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <h2>Natasha Romanoff</h2>
+                                <h2>Drake Paulsen</h2>
                                 <div class="text-affect"></div>
                                 <p class="banner-btn"><a href="#contact">Contact Now</a></p>
                                 <div class="clearfix"></div>
@@ -156,10 +156,8 @@
                         <p>I'm a 25 year-old Australian Freelance Front-end Developer working for the last five years. I have experience working with local clients along with clients from all around the world. I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.</p>
                         <div class="socials">
                             <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                <li><a href="https://www.facebook.com/DrakePaulsen"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/drakepaulsen/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
