--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="portfolio template based on HTML5">
     <meta name="keywords" content="onepage, developer, resume, cv, ,personal, portfolio, personal resume, clean, modern">
-    <meta name="author" content="MouriTheme">
+    <meta name="author" content="DrakePaulsen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--template title-->
@@ -605,7 +605,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <p>&copy; All Right Reserved By <a href="https://www.codester.com/user/MouriTheme/" target="_blank">MouriTheme</a></p>
+                    <p>&copy; All Right Reserved By <a href="" target="_blank">Drake Paulsen</a></p>
                 </div>
             </div>
         </div>
