--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <div class="about-right wow fadeInDown" data-wow-delay="0.8s">
-                        <h1>I'm <span class="text-primary">natasha romanoff</span> and I'm a Full stack Developer</h1> <!--change name and designation here-->
-                        <p>I'm a 25 year-old Australian Freelance Front-end Developer working for the last five years. I have experience working with local clients along with clients from all around the world. I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.</p>
+                        <h1>I'm <span class="text-primary">Drake Paulsen</span> and I'm a Full stack Developer</h1> <!--change name and designation here-->
+                        <p>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.</p>
                         <div class="socials">
                             <ul>
                                 <li><a href="https://www.facebook.com/DrakePaulsen"><i class="fa fa-facebook"></i></a></li>
