--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </div>
                         <div class="services-content">
                             <h3>UI/UX Design</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -269,8 +269,8 @@
                             <i class="fa fa-bar-chart"></i>
                         </div>
                         <div class="services-content">
-                            <h3>Web Design</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h3>App Development</h3> <!--edit the service you give-->
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         </div>
                         <div class="services-content">
                             <h3>Web Development</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                         </div>
                         <div class="services-content">
                             <h3>Graphics Design</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                         </div>
                         <div class="services-content">
                             <h3>SEO Marketing</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -313,8 +313,8 @@
                             <i class="fa fa-envelope-o"></i>
                         </div>
                         <div class="services-content">
-                            <h3>Photography</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h3>Email Marketing</h3> <!--edit the service you give-->
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -417,7 +417,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-header">
-                        <h2>What Buyer's Say</h2>
+                        <h2>What my clients Say</h2>
                         <p class="line1"></p>
                         <p class="line2"></p>
                     </div>
@@ -480,7 +480,7 @@
             <div class="row">
                 <div class="single-invite text-center">
                     <h2>do you have any project need to be done?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias at cupiditate distinctio dolorem dolores impedit, inventore magnam magni nam numquam quidem ratione rem repellendus, saepe?</p>
+                    <p></p>
                     <a href="#contact" class="my-btn-3">Get started</a>
                 </div>
             </div>
@@ -517,7 +517,7 @@
                                      </div>
 
                                      <h2>Address / Street</h2>
-                                     <p>No 247, Swanlake Lane, USA</p> <!--edit here-->
+                                     <p>Orland,FL</p> <!--edit here-->
                                  </div>
                              </div>
                              <div class="col-sm-4 col-md-4">
@@ -529,7 +529,7 @@
                                      </div>
 
                                      <h2>Contact Number</h2>
-                                     <p>+123 - 256 - 5456</p> <!--edit here-->
+                                     <p>(470)-318-9124</p> <!--edit here-->
                                  </div>
                              </div>
                              <div class="col-sm-4 col-md-4">
@@ -541,7 +541,7 @@
                                      </div>
 
                                      <h2>Website Address</h2>
-                                     <p>www.yourwebsite.com</p> <!--edit here-->
+                                     <p>drakepaulsen@gmail.com</p> <!--edit here-->
                                  </div>
                              </div>
                          </div>
