--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                                      </div>
 
                                      <h2>Address / Street</h2>
-                                     <p>Orland,FL</p> <!--edit here-->
+                                     <p>Orlando,FL</p> <!--edit here-->
                                  </div>
                              </div>
                              <div class="col-sm-4 col-md-4">
@@ -540,7 +540,7 @@
                                          </ul>
                                      </div>
 
-                                     <h2>Website Address</h2>
+                                     <h2>Email Address</h2>
                                      <p>drakepaulsen@gmail.com</p> <!--edit here-->
                                  </div>
                              </div>
