--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                          </ul>
                                      </div>
 
-                                     <h2>Address / Street</h2>
+                                     <h2>Location</h2>
                                      <p>Orlando,FL</p> <!--edit here-->
                                  </div>
                              </div>
