--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                    <p>&copy; All Right Reserved By <a href="" target="_blank">Drake Paulsen</a></p>
+                    <p>&copy; All Right Reserved By <a href="https://www.linkedin.com/in/drakepaulsen/" target="_blank">Drake Paulsen</a></p>
                 </div>
             </div>
         </div>
