--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="DrakePaulsen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--template title-->
+    <!--Start site-->
     <title>Drake Paulsen</title>
 
     <!--==========Favicon==========-->
@@ -188,20 +188,20 @@
                         <div class="wrapper right">
                             <div class="content">
                                 <div class="education-area wow fadeInDown" data-wow-delay="0.2s">
-                                    <h6>2013-2014</h6> <!--edit here-->
-                                    <h4>MSc In Computer Science</h4> <!--edit here-->
-                                    <h3>York University</h3> <!--edit here-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque dicta et expedita perferendis voluptas!</p>
+                                    <h6>2008-2012</h6> <!--edit here-->
+                                    <h4>BA In Computer Science</h4> <!--edit here-->
+                                    <h3>Dekalb Technical College</h3> <!--edit here-->
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
                         <div class="wrapper right">
                             <div class="content">
                                 <div class="education-area wow fadeInDown" data-wow-delay="0.6s">
-                                    <h6>2008-2012</h6> <!--edit here-->
-                                    <h4>BSc In Computer Science</h4> <!--edit here-->
-                                    <h3>University of Sydney</h3> <!--edit here-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque dicta et expedita perferendis voluptas!</p>
+                                    <h6>2004-2008</h6> <!--edit here-->
+                                    <h4>High School Graduate</h4> <!--edit here-->
+                                    <h3>Social Circle High School</h3> <!--edit here-->
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
@@ -214,19 +214,19 @@
                             <div class="content">
                                 <div class="experience-area wow fadeInDown" data-wow-delay="0.4s">
                                     <h6>2016-Present</h6> <!--edit here-->
-                                    <h4 class="mb-2">Mouri Telecom</h4> <!--edit here-->
+                                    <h4 class="mb-2">Paulsen Media Group</h4> <!--edit here-->
                                     <h3 class="mb-2">Senior Developer</h3> <!--edit here-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque dicta et expedita perferendis voluptas!</p>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
                         <div class="wrapper right">
                             <div class="content">
                                 <div class="experience-area wow fadeInDown" data-wow-delay="0.8s">
-                                    <h6>2014-2015</h6> <!--edit here-->
-                                    <h4 class="mb-2">Xenox Softwere</h4> <!--edit here-->
-                                    <h3 class="mb-2">Junior Developer</h3> <!--edit here-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque dicta et expedita perferendis voluptas!</p>
+                                    <h6>2013-2018</h6> <!--edit here-->
+                                    <h4 class="mb-2">The TKO Group</h4> <!--edit here-->
+                                    <h3 class="mb-2">Internet Sales Director</h3> <!--edit here-->
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
