--- a/index.html
+++ b/index.html
@@ -428,40 +428,46 @@
                     <div id="testimonial-slider" class="owl-carousel">
                         <div class="single-testimonial">
                             <div class="testimonial-content">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
+                                <p>It’s rare that you come across standout talent like Drake.
+I had the pleasure to work with him for quite some time. He always delivered what he said he was going to do. We collaborated on his marketing for some larger Auto Groups. 
+His knowledge and expertise in the marketing field brought revenue to the bottom line. 
+His ability to multitask on several projects was unlike any I’ve seen before. He made a direct impact to the teams he worked for. 
+I will miss our conversations on how to generate more ROI for the projects he was working on. 
+Drake is an asset to anyone who is looking to hire him. </p>
                             </div> <!--copy and paste the best review you have got from buyer inside p tag-->
                             <div class="pic">
                                 <img src="images/testimonial/1.png" alt="testimonial image"> <!--here you can change image-->
                             </div>
                             <div class="testimonial-title">
-                                <h3>Jack Reacher</h3> <!--you can change the reviewer name here-->
-                                <small>Web Developer</small> <!--reviewer's designation-->
+                                <h3>Donna Miller</h3> <!--you can change the reviewer name here-->
+                                <small>District Manager at Auto Credit Express/Internet Brands</small> <!--reviewer's designation-->
                             </div>
                         </div>
 
                         <div class="single-testimonial">
                             <div class="testimonial-content">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
+                                <p>Drake truly goes the extra mile to understand his client's needs and brings with him the industry knowledge it takes to be successful. Will continue to use Drake's services no matter which company he is working through.</p>
                             </div> <!--copy and paste the best review you have got from buyer inside p tag-->
                             <div class="pic">
                                 <img src="images/testimonial/2.png" alt="testimonial image"> <!--here you can change image-->
                             </div>
                             <div class="testimonial-title">
-                                <h3>David Doe</h3> <!--you can change the reviewer name here-->
-                                <small>Web Designer</small> <!--reviewer's designation-->
+                                <h3>Kyle Nord</h3> <!--you can change the reviewer name here-->
+                                <small>Enviromental & Engineering Recruiter at Aerotek</small> <!--reviewer's designation-->
                             </div>
                         </div>
 
                         <div class="single-testimonial">
                             <div class="testimonial-content">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
+                                <p>Drake Paulsen has done great work in a timely manner. Drake Paulsen is an inspiration because of his passion to strive for the best. He is extremely creative and knowledgeable. I had the pleasure to work with him on a number of different projects and was impressed with the depth of knowledge he possesses. Drake Paulsen has an impressive work ethic.
+</p>
                             </div> <!--copy and paste the best review you have got from buyer inside p tag-->
                             <div class="pic">
                                 <img src="images/testimonial/3.png" alt="testimonial image"> <!--here you can change image-->
                             </div>
                             <div class="testimonial-title">
-                                <h3>Shane Doe</h3> <!--you can change the reviewer name here-->
-                                <small>PHP Developer</small> <!--reviewer's designation-->
+                                <h3>Chris Bialek</h3> <!--you can change the reviewer name here-->
+                                <small>Account Manager at El Toro Interactive, LLC</small> <!--reviewer's designation-->
                             </div>
                         </div>
                     </div>
