--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <i class="fa fa-area-chart"></i>
                         </div>
                         <div class="services-content">
-                            <h3>Graphics Design</h3> <!--edit the service you give-->
+                            <h3>Digital Marketing</h3> <!--edit the service you give-->
                             <p></p>
                         </div>
                     </div>
