--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <div class="col-md-12">
                                 <h2>Drake Paulsen</h2>
                                 <div class="text-affect"></div>
-                                <p class="banner-btn"><a href="#contact">Contact Now</a></p>
+                                <p class="banner-btn"><a href="#contact">Get a qoute!</a></p>
                                 <div class="clearfix"></div>
                                 <div class="mouse-icon hidden-sm hidden-xs">
                                     <div class="wheel"></div>
