--- a/index.html
+++ b/index.html
@@ -229,7 +229,41 @@
                                     <h6>2016-Present</h6> <!--edit here-->
                                     <h4 class="mb-2">Paulsen Media Group</h4> <!--edit here-->
                                     <h3 class="mb-2">Senior Developer</h3> <!--edit here-->
-                                    <p></p>
+                                    <p>Actively Seek New Programming Knowledge
+Build Products Using HTML/CSS/JS and Other Front-End Technologies
+Code and Deploy Applications in a Cross-Platform, Cross-Browser Environment
+Detail-Oriented
+Document Project Build and Maintenance
+Experience Building User Interfaces and Prototypes From Wireframes and Designs
+Experience With Git and Github
+Experience With Photoshop
+Familiar With Development and Debugging Tools for Cross-Browser Issues
+Familiar With Social Media and Third Party APIs
+Follow and Implement Industry Accepted Best Practices and Tools
+Manage and Prioritize Multiple Projects
+Proficient With Javascript
+Implemented UI design using HTML and CSS.
+Developed payment gateway using Backbone, Stripe and Parse.
+Designed and built signup and login pages using HTML and JavaScript and used Parse to save user information on the cloud.
+Implemented voice-to-text function using Google Speech Recognition API.
+Fulfilled the key words recognition with Open Calais API, and translated key words to pictures using Flickr API.
+Combined the several APIs on Aliyun cloud server and organized them in a fancy way by jQuery and HTML5.
+Gathered specs from client to create a feasible workflow
+Utilized MVC principles to ensure a clean architecture and a lean code base for maximum
+Help integrate functionality into new existing JAVA based applications running on a bootstrap based library.
+Solid Understanding of HTML5/CSS3, jQuery and Responsive Design
+Intensive
+Tag Integration 
+Adobe DTM
+Tealium
+Google Tag Manager
+Troubleshoot and Communicate Effectively
+Update Current Websites to Meet Modern Web Standards
+UI / UX
+PPC Management
+Social Media Marketing
+Social Media Management
+</p>
                                 </div>
                             </div>
                         </div>
@@ -239,7 +273,35 @@
                                     <h6>2013-2018</h6> <!--edit here-->
                                     <h4 class="mb-2">The TKO Group</h4> <!--edit here-->
                                     <h3 class="mb-2">Internet Sales Director</h3> <!--edit here-->
-                                    <p></p>
+                                    <p>As the Internet sales Manager my main responsibility was to facilitate the sales of automobiles to prospects who contacted the dealer via the Internet. To do so, I maintained the dealer website, promoted the dealership online, managed the export of inventory to various digital marketplaces,Social Media Marketing,  and directed a team of 5-6 salespeople. I also had broad IT related responsibilities, including new workstation setup, troubleshooting and repair, basic networking, malicious software removal, network phone setup, graphic design and training employees to effectively use the ELeads CRM software.
+
+Website development 
+Home Net
+Fuzion Zone
+Third party Integrations such as CarFax, Cargurus, etc.  
+Marketing Director 
+PPC
+Amazon
+Social Media
+Set up direct mailers 
+Sales Team management 
+Social network management 
+Billboards and TV/Internet advertisements
+Eleads specialist 
+manage new and used car online inventory by changing prices, removing sold, adding videos and pictures  
+Create, maintain and measure the internet business development processes 
+Generate appointments and quotes by means of proactive outbound  
+prospecting and lead activity management in an effort to qualify and market to potential customers 
+Handle all incoming internet email leads 
+Be available to respond to email inquiries in a professional, well-spoken manner 
+Assist customers in appropriate vehicle selection – be the product expert & sounding board 
+Direct customers to product information resources, including those available on the internet 
+Check email frequently and respond to inquiries immediately 
+Deliver inquiries/messages intended for other sales personnel and departments promptly 
+Hold yourself and others to high moral and ethical standards and conduct yourself with honesty and integrity 
+Manage business development representatives for lead generation process 
+Develop and maintain the new hire and interview processes for all BDC reps/appointment coordinators
+</p>
                                 </div>
                             </div>
                         </div>
@@ -271,7 +333,7 @@
                             <i class="fa fa-superpowers"></i>
                         </div>
                         <div class="services-content">
-                            <h3>UI/UX Design</h3> <!--edit the service you give-->
+                            <h3>CRM Development</h3> <!--edit the service you give-->
                             <p></p>
                         </div>
                     </div>
