--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
                         </a>
 
                         <div class="gallery-text">
-                            <h2>Photography</h2>
+                            <h2>Digital Marketing</h2>
                         </div>
                     </div>
                 </div>
@@ -429,7 +429,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
                         </a>
 
                         <div class="gallery-text">
-                            <h2>Magazine</h2>
+                            <h2>App Development</h2>
                         </div>
                     </div>
                 </div>
@@ -451,7 +451,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
                         </a>
 
                         <div class="gallery-text">
-                            <h2>Web Design</h2>
+                            <h2>CRM Development</h2>
                         </div>
                     </div>
                 </div>
@@ -462,7 +462,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
                         </a>
 
                         <div class="gallery-text">
-                            <h2>Poster Design</h2>
+                            <h2>Web Development</h2>
                         </div>
                     </div>
                 </div>
