--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
         <div class="container">
             <div class="row">
                 <div class="section-header">
-                    <h2>My Works</h2>
+                    <h2>Some of my work</h2>
                     <p class="line1"></p>
                     <p class="line2"></p>
                 </div>
