--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ Develop and maintain the new hire and interview processes for all BDC reps/appoi
                         </a>
 
                         <div class="gallery-text">
-                            <h2>brochure</h2>
+                            <h2>Email Marketing</h2>
                         </div>
                     </div>
                 </div>
