--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ Drake is an asset to anyone who is looking to hire him. </p>
                                      </div>
                                  </div>
                                  <div class="col-md-12">
-                                     <button class="btn btn-send" value="submit">Send message</button>
+                                     <button class="btn btn-send" value="$fields[$key]: $value\n">Send message</button>
                                  </div>
                              </div>
                          </div>
