--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
   gtag('config', 'UA-131480514-1');
 </script>
-
-
     
-    <!--meta tags-->
+   <!--meta tags-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="portfolio template based on HTML5">
@@ -23,7 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Start site-->
-    <title>Drake Paulsen</title>
+    
+    <title>Drake A. Paulsen</title>
 
     <!--==========Favicon==========-->
 
