--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <!--meta tags-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="portfolio template based on HTML5">
+    <meta name="description" content="Drake Paulsen|Full Stack Developer|Digital Marketing| Android App Developer| iOS App Developer">
     <meta name="keywords" content="onepage, developer, resume, cv, ,personal, portfolio, personal resume, clean, modern">
     <meta name="author" content="DrakePaulsen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
