--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ Drake is an asset to anyone who is looking to hire him. </p>
                                      </div>
                                  </div>
                                  <div class="col-md-12">
-                                     <button class="btn btn-send" value="send form">Send message</button>
+                                     <button class="btn btn-send" value="">Send message</button>
                                  </div>
                              </div>
                          </div>
