--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <div class="about-right wow fadeInDown" data-wow-delay="0.8s">
-                        <h1><span class="text-primary">Drake Paulsen</span>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.
+                        <h1><span class="text-primary">Drake Paulsen</span>
+</ul>
+			    
+			    <p>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.
 
 <ul>
 	<li>Experience in development and deployment of applications using JBoss, Weblogic Application Server, IBM WebSphere Application and Apache Tomcat.</li>
@@ -187,8 +190,7 @@
 	<li>Angular2.0</li>
 	<li>Bootstrap</li>
 	<li>NodeJS</li>
-	<li>backboneJS</li>
-</ul></p>
+	<li>backboneJS</li></p>
                         <div class="socials">
                             <ul>
                                 <li><a href="https://www.facebook.com/DrakePaulsen"><i class="fa fa-facebook"></i></a></li>
