--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <div class="about-right wow fadeInDown" data-wow-delay="0.8s">
-                        <h1><span class="text-primary">Drake Paulsen</span>
+			    <h1><span class="text-primary">Drake Paulsen</span></h1>
 			    
 			    <p>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.
 
