--- a/index.html
+++ b/index.html
@@ -152,12 +152,14 @@
                     <div class="about-left wow fadeInDown" data-wow-delay="0.4s">
                         <img src="images/about/about.png" alt="profile image">
                     </div>
-			<div class="socials">
+			<center>
+				<div class="socials">
                             <ul>
                                 <li><a href="https://www.facebook.com/DrakePaulsen"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/drakepaulsen/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
+			</center>
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <div class="about-right wow fadeInDown" data-wow-delay="0.8s">
