--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@ Drake is an asset to anyone who is looking to hire him. </p>
         <div class="container">
             <div class="row">
                 <div class="single-invite text-center">
-                    <h2>do you have any project need to be done?</h2>
+                    <h2>Want to build a snowman?</h2>
                     <p></p>
-                    <a href="#contact" class="my-btn-3">Get started</a>
+                    <a href="#contact" class="my-btn-3">Contact me.</a>
                 </div>
             </div>
         </div>
