--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                         <li><a class="smooth-menu" href="#portfolio">Portfolio</a></li>
                                         <li><a class="smooth-menu" href="#testimonial">Testimonial</a></li>
                                         <li><a class="smooth-menu" href="#contact">Contact</a></li>
+					<li><a class="smooth-menu" href="https://pmgcrm.com">PMG CRM Login</a></li>
                                     </ul>
                                 </nav>
                             </div>
