--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+	
+	
+<!-- Load Facebook SDK for JavaScript -->	
+	
+	
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="806438016365786"
+  theme_color="#13cf13">
+</div>
 
     <!--preloader starts-->
 
